# logic-network-generator

./: .env  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  ANALYSIS_COMPLETE.md  BUG_FIX_RECOMMENDATION.md  CHANGELOG.md  COMPLETE_UNDERSTANDING.md  CONTRIBUTING.md  CRITICAL_FINDINGS_SUMMARY.md  DEEP_ANALYSIS_FINDINGS.md  DEEP_ANALYSIS_STATUS.md  ENTITYSET_TRACKING_IMPLEMENTATION.md  ENTITY_SET_TRACKING_FIX.md  FINDINGS.md  FIX_COMPLETE_SUMMARY.md  IMPROVEMENT_RECOMMENDATIONS.md  LOOP_ANALYSIS_SUMMARY.md  PATHWAY_RECONSTRUCTION_VERIFICATION.md  POSITION_AWARE_UUID_DESIGN.md  QUICK_WINS.md  README.md  SECURITY.md  TEST_FINDINGS.md  TEST_SUITE_SUMMARY.md  UUID_POSITION_BUG_ANALYSIS.md  VALIDATION_README.md  analyze_loops.py  create-denormalized-pathways.py  docker-compose.yml  investigate_loops.py  pathways.tsv  pyproject.toml  requirements.txt  test_position_aware.py  test_reaction_connections.py  test_sqlite_insert.py  validate_generated_network.py  validate_pathway.py  (+1 more)
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: flake8.yml  ruff.yml  test.yml
docs/: ARCHITECTURE.md  DESIGN_DECISIONS.md  UUID_DESIGN.md  sets_with_combinatorial_explosion.txt
examples/: README.md  generate_pathway_example.py  improved_code_example.py
schema/: logic_network.linkml.yaml
scripts/: validate_logic_network.py
src/: argument_parser.py  best_reaction_match.py  decomposed_uid_mapping.py  diagram_connectivity.py  logic_network_generator.py  neo4j_connector.py  pathway_generator.py  pi_generator.py  reaction_generator.py
tests/: README.md  __init__.py  test_actual_edge_semantics.py  test_and_or_logic.py  test_autophagy_validation.py  test_best_reaction_match.py  test_comprehensive_validation.py  test_decomposition_semantics.py  test_diagram_connectivity.py  test_edge_direction_integration.py  test_input_validation.py  test_logic_network_generator.py  test_network_invariants.py  test_pathway_reconstruction.py  test_pathway_validation.py  test_provenance_exports.py  test_reactome_version.py  test_regulators_and_catalysts.py  test_transformation_semantics.py  test_uid_reaction_connections.py  test_utility_functions.py  test_uuid_mapping_export.py  test_uuid_position_bug.py
validation_results/: 2026-04-29_mpbio_per_pathway.tsv  2026-04-29_mpbio_per_pathway_experimental.tsv  2026-04-29_mpbio_per_pathway_experimental_failures.tsv  2026-04-29_mpbio_per_pathway_failures.tsv  2026-04-29_no_path_neo4j_check.tsv  README.md
