[tool.poetry]
name = "mp-biopath-pathway-generator"
version = "0.1.0"
description = "Generator of pairwise interaction files from Reactome Graph database"
authors = ["Adam Wright <adam.wright@wormbase.org>"]
license = "Apache 2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
py2neo = "^2021.2.4"
pandas = "^2.2.0"
numpy = "^1.26.3"
pyarrow = "^15.0.0"
scipy = "^1.12.0"
mypy = "^1.8.0"
isort = "^5.13.2"
click = "^8.1.7"
python-dotenv = "^1.0.1"

[tool.poetry.group.dev.dependencies]
mypy = "^1.8.0"
pandas-stubs = "^2.1.4.231227"
black = "^21.12b0"
isort = "^5.10.3"
ruff = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.flake8]
ignore = ""
plugins = ["flake8-mypy"]

[tool.black]
line-length = 88  # Adjust line length as needed
target-version = ['py39'] 
